# colori

./: .gitignore  4er.json  CLAUDE.md  Cargo.toml  README.md  RULES.md  TRAINING.md  analysis.html  archive-old-games.sh  colori_cards.md  dye_cards.md  eval_confidence.py  expansions  find-4-round-games.sh  index.html  optimal_eval.py  package-lock.json  package.json  selection_pressure.py  starting-genes.json  tsconfig.app.json  variants-hyper-parameters.json  variants-tourney.json  variants.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: deploy-to-s3.yml
colori-ai-wasm/: Cargo.toml
colori-ai-wasm/src/: action_phase.rs  apply_choice.rs  cards.rs  color_wheel.rs  colori_game.rs  colors.rs  draw_phase.rs  lib.rs  types.rs
colori-core/: Cargo.toml
colori-core/benches/: unordered_cards_bench.rs
colori-core/src/: action_phase.rs  apply_choice.rs  atomic.rs  cards.rs  choices.rs  cleanup_phase.rs  color_wheel.rs  colori_game.rs  colors.rs  deck_utils.rs  draft_phase.rs  draw_log_helpers.rs  draw_phase.rs  encoding.rs  exp3_ismcts.rs  fixed_vec.rs  ga.rs  game_log.rs  ismcts.rs  lib.rs  minimax.rs  nn_mcts.rs  opening_book.rs  replay.rs  rhea.rs  rollout.rs  rollout_policy.rs  scoring.rs  setup.rs  state_encoding.rs  types.rs  unordered_cards.rs
colori-core/src/choices/: destroy.rs  glass.rs  mix_sequences.rs  mod.rs  multiset.rs
colori-core/src/scoring/: diff_eval.rs  diff_eval_grad.rs  first_pick.rs  heuristic_params.rs  mod.rs  simd_ops.rs
colori-core/src/unordered_cards/: bitset.rs  mod.rs  registry.rs  serde_impls.rs
colori-core/tests/: colori-log-2026-03-22-Player 1-AI Player 2.json  colori-log-2026-03-23-Player 1-AI Player 2.json  integration_tests.rs
colori-gui/: Cargo.toml
colori-gui/src/: app.rs  main.rs
colori-python/: Cargo.toml  pyproject.toml
colori-python/src/: lib.rs
colori-runner/: Cargo.toml
colori-runner/src/: cli.rs  (+9 more)
colori-wasm/: Cargo.toml  build.rs
colori-wasm/src/: lib.rs
diff-eval-training/: checkpoint.json  diff-eval-epoch-1.json  diff-eval-epoch-10.json  diff-eval-epoch-11.json  diff-eval-epoch-12.json  diff-eval-epoch-13.json  diff-eval-epoch-137.json  diff-eval-epoch-14.json  diff-eval-epoch-15.json  diff-eval-epoch-16.json  diff-eval-epoch-17.json  diff-eval-epoch-18.json  diff-eval-epoch-19.json  diff-eval-epoch-2.json  diff-eval-epoch-20.json  diff-eval-epoch-21.json  diff-eval-epoch-213.json  diff-eval-epoch-22.json  diff-eval-epoch-23.json  diff-eval-epoch-24.json  diff-eval-epoch-25.json  diff-eval-epoch-26.json  diff-eval-epoch-27.json  diff-eval-epoch-28.json  diff-eval-epoch-29.json  diff-eval-epoch-3.json  diff-eval-epoch-30.json  diff-eval-epoch-31.json  diff-eval-epoch-32.json  diff-eval-epoch-33.json  diff-eval-epoch-4.json  diff-eval-epoch-5.json  diff-eval-epoch-6.json  diff-eval-epoch-7.json  diff-eval-epoch-8.json  diff-eval-epoch-9.json
genetic-algorithm/: batch-c6zk1e-gen-13.json  batch-lki08w-gen-0.json  batch-lki08w-gen-12.json  batch-lki08w-gen-13.json  batch-lki08w-gen-14.json  batch-lki08w-gen-17.json  batch-lki08w-gen-2.json  batch-lki08w-gen-28.json  batch-lki08w-gen-32.json  batch-nocdm1-gen-7.json  batch-rqo1vv-gen-18.json  batch-sih8cq-gen-14.json
scripts/: merge-batches.sh
src/: App.svelte  app.css  gameLog.ts  gameUtils.ts  persistence.ts
training/: config.py  export_checkpoint.py  mcts.py  model.py  replay_buffer.py  requirements.txt  run_training.py  self_play.py  train.py
(+137 files in other folders)
