[package]
name = "colori-core"
version = "0.1.0"
edition = "2021"

[features]
nn = ["ort"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.9", features = ["small_rng"] }
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
ort = { version = "2.0.0-rc.11", optional = true, features = ["ndarray"] }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.9", features = ["small_rng"] }

[[bench]]
name = "unordered_cards_bench"
harness = false
