[package]
name = "colori-core"
version = "0.1.0"
edition = "2021"

[features]
nn-ai = ["ort", "ndarray"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
wyrand = "0.4"
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wyrand = "0.4"

[[bench]]
name = "unordered_cards_bench"
harness = false
