[package]
name = "colori-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "colori_python"
crate-type = ["cdylib"]

[dependencies]
colori-core = { path = "../colori-core", features = ["nn"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
rand = { version = "0.9", features = ["small_rng"] }
serde_json = "1"
