[package]
name = "colori-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colori-core = { path = "../colori-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = true
